--- a/myface-onface-html/src/views/block/modal/_contact-modal.html
+++ b/myface-onface-html/src/views/block/modal/_contact-modal.html
@@ -1,11 +1,46 @@
-<div  class="modal n-modal" id="contact-modal" style="display: block">
-  <div class="modal-dialog modal-md">
+<div  class="modal n-modal" id="contact-modal">
+  <div class="modal-dialog">
     <div class="modal-content">
 	    <div class="modal-header">
 	      <button type="button" class="close close-btn" data-dismiss="modal" aria-label="Close"></button>
 	    </div>
-      <div class="modal-body text-center">
-      	
+      <div class="modal-body">
+      	<div class="row">
+      		<div class="col-sm-6 img-label">
+      			<h4 class="sp-ct-title">Hỗ trợ giải quyết đơn hàng</h4>
+      			<p class="sp-ct-text">myFace Shop sẽ trả lời yêu cầu của bạn trong vòng 24 tiếng. <br>Xin vui lòng gọi số Hotline:<b>1900 636 798</b> <br>(08-18h, từ T2-T7) để được hỗ trợ nhanh hơn.</p>
+	      	</div>
+	      	<div class="col-sm-6 content-label">
+	      		<!--form-horizontal-->
+						<div class="sp-contact-form">
+							<div class="form-group">
+	              <label for="" class="control-label">Họ tên</label>
+	              <input type="text" class="form-control">
+	            </div>
+	            <div class="form-group">
+	              <label for="" class="control-label">Email</label>
+	              <input type="email" class="form-control">
+
+	            </div>
+	            <div class="form-group">
+	              <label for="" class="control-label">Tiêu đề</label>
+	              <input type="text" class="form-control">
+	            </div>
+	            <div class="form-group">
+	              <label for="" class="control-label">Mã đơn hàng</label>
+	              <input type="text" class="form-control">
+
+	            </div>
+	            <div class="form-group">
+	              <label for="" class="control-label">Nội dung</label>
+	              <textarea class="form-control" rows="3"></textarea>
+	            </div>
+	            <div class="form-group p-group-1">
+		            <input type="submit" class="btn btn-primary" value="Gửi yêu cầu">
+	            </div>
+			    	</div><!--/.form-horizontal-->
+	      	</div>
+      	</div>
       </div>
     </div>
     <!-- /.modal-content -->
