--- a/myface-onface-html/src/views/layout/_layout-support-center.html
+++ b/myface-onface-html/src/views/layout/_layout-support-center.html
@@ -36,7 +36,7 @@
 	<nav class="support-nav">
 		<div class="container">
 			<span class="sp-label">Trung tâm hỗ trợ myFace Shop</span>
-			<a class="pull-right invoice-sp-link" href="#">Hổ trợ giải quyết đơn hàng</a>
+			<a class="pull-right invoice-sp-link" href="#" data-toggle="modal" data-target="#contact-modal">Hỗ trợ giải quyết đơn hàng</a>
 		</div>
 	</nav>
 	{% block support-center %}
