--- a/myface-onface-html/src/views/support-center.html
+++ b/myface-onface-html/src/views/support-center.html
@@ -7,19 +7,25 @@
 			    <a class="sidebar-tab-selector" href="#"></a>
 			    <ul class="sidebar-list sidebar-drop">
 			      <li class="active">
-			        <a href="#">Tốc độ giao hàng</a>
+			        <a href="support-center.html">Câu hỏi thường gặp</a>
 			      </li>
 			      <li class="">
-			        <a href="#">Hướng dẫn hủy đơn hàng</a>
+			        <a href="support-center.html">Thanh toán</a>
 			      </li>
 			      <li class="">
-			        <a href="#"">Hướng dẫn đổi hàng & trả hàng hoàn tiền</a>
+			        <a href="support-center.html"">Giá cả</a>
 			      </li>
 			      <li class="">
-			        <a href="#">Hướng dẫn kiểm tra đơn hàng</a>
+			        <a href="support-center.html">Giao hàng</a>
 			      </li>
 			      <li class="">
-			        <a href="#"">Hướng dẫn cách đặt hàng</a>
+			        <a href="support-center.html"">Hướng dẫn cách đặt hàng</a>
+			      </li>
+			      <li class="">
+			        <a href="support-center.html"">Đổi trả</a>
+			      </li>
+			      <li class="">
+			        <a href="support-center.html"">Khuyến mãi</a>
 			      </li>
 			    </ul>
 			  </div>
@@ -28,15 +34,68 @@
 				<div class="support-div-1">
 					<h2 class="sp-title">Tốc độ giao hàng</h2>
 					<div class="sp-content">
-						<label>Các quận trung tâm TPHCM:</label>
-						<p>My Mall sẽ giao đơn hàng đến quý khách trong vòng 3-5 ngày làm việc (không tính thứ 7 và chủ nhật) tính từ lúc đơn hàng xác nhận thành công trên hệ thống.</p>
-						<label>Các quận ngoại thành TPHCM (Củ Chi, Hóc Môn, Cần Giờ):</label>
-						<p>MyMall.vn sẽ giao đơn hàng đến quý khách trong vòng 3-5 ngày làm việc (không tính thứ 7 và chủ nhật) tính từ lúc đơn hàng xác nhận thành công trên hệ thống.</p>
-						<label>Các khu vực khác do đội giao nhận MyMall.vn giao hàng:</label>
-						<p>MyMall.vn sẽ giao đơn hàng đến quý khách trong vòng 5-7 ngày làm việc (không tính thứ 7 và chủ nhật) tính từ lúc đơn hàng xác nhận thành công trên hệ thống.</p>
-						<label>Các khu vực khác do đội giao nhận liên kết khác giao hàng:</label>
-						<p>MyMall.vn sẽ giao đơn hàng đến quý khách trong vòng 7 ngày làm việc (không tính thứ 7 và chủ nhật) tính từ lúc đơn hàng xác nhận thành công trên hệ thống.</p>
-						<p>Ngoài ra quý khách cũng có thể liên hệ đến số <b>1900636088</b>, nhân viên bộ phận chăm sóc khách hàng MyMall.vn luôn sẵn sàng hỗ trợ quý khách kiểm tra chính xác thời gian giao nhận đơn hàng. Chúng tôi rất hân hạnh phục vụ bạn.</p>
+						<div class="panel-group accordion">
+						  <div class="panel">
+						    <div class="panel-heading">
+						      <a class="collapsed" role="button" data-toggle="collapse" data-parent=".accordion" href="#collapse-1">
+					          myFace.vn là gì?
+					        </a>
+						    </div>
+						    <div id="collapse-1" class="collapse">
+						      <div class="panel-body">
+						      	<p> myFace.vn là sàn giao dịch thương mại điện tử nên hiện nay chúng tôi không có cửa hàng bên ngoài. Ở myFace.vn, chúng tôi cam kết sẽ mang đến cho quý khách những sản phẩm trung thực, giống với hình ảnh thông tin đăng tải trên website nhất.</p>
+						      </div>
+						    </div>
+						  </div>
+						  <div class="panel">
+						    <div class="panel-heading">
+						      <a class="collapsed" role="button" data-toggle="collapse" data-parent=".accordion" href="#collapse-2">
+					          myFace.vn có bán những sản phẩm gì?
+					        </a>
+						    </div>
+						    <div id="collapse-2" class="collapse">
+						      <div class="panel-body">
+						      	<p> myFace.vn là sàn giao dịch thương mại điện tử nên hiện nay chúng tôi không có cửa hàng bên ngoài. Ở myFace.vn, chúng tôi cam kết sẽ mang đến cho quý khách những sản phẩm trung thực, giống với hình ảnh thông tin đăng tải trên website nhất.</p>
+						      </div>
+						    </div>
+						  </div>
+						  <div class="panel">
+						    <div class="panel-heading">
+						      <a class="collapsed" role="button" data-toggle="collapse" data-parent=".accordion" href="#collapse-3">
+					          Những Nhãn Hiệu Nào có mặt trên myFace.vn?
+					        </a>
+						    </div>
+						    <div id="collapse-3" class="collapse">
+						      <div class="panel-body">
+						      	<p> myFace.vn là sàn giao dịch thương mại điện tử nên hiện nay chúng tôi không có cửa hàng bên ngoài. Ở myFace.vn, chúng tôi cam kết sẽ mang đến cho quý khách những sản phẩm trung thực, giống với hình ảnh thông tin đăng tải trên website nhất.</p>
+						      </div>
+						    </div>
+						  </div>
+						  <div class="panel">
+						    <div class="panel-heading" role="tab">
+						      <a class="collapsed" role="button" data-toggle="collapse" data-parent=".accordion" href="#collapse-4">
+					          Cách Tìm Sản Phẩm trên myFace.vn
+					        </a>
+						    </div>
+						    <div id="collapse-4" class="collapse">
+						      <div class="panel-body">
+						      	<p> myFace.vn là sàn giao dịch thương mại điện tử nên hiện nay chúng tôi không có cửa hàng bên ngoài. Ở myFace.vn, chúng tôi cam kết sẽ mang đến cho quý khách những sản phẩm trung thực, giống với hình ảnh thông tin đăng tải trên website nhất.</p>
+						      </div>
+						    </div>
+						  </div>
+						  <div class="panel">
+						    <div class="panel-heading">
+						      <a class="collapsed" role="button" data-toggle="collapse" data-parent=".accordion" href="#collapse-5">
+					          myFace.vn có cửa hàng bên ngoài để xem sản phẩm trực tiếp không?
+					        </a>
+						    </div>
+						    <div id="collapse-5" class="collapse">
+						      <div class="panel-body">
+						      	<p> myFace.vn là sàn giao dịch thương mại điện tử nên hiện nay chúng tôi không có cửa hàng bên ngoài. Ở myFace.vn, chúng tôi cam kết sẽ mang đến cho quý khách những sản phẩm trung thực, giống với hình ảnh thông tin đăng tải trên website nhất.</p>
+						      </div>
+						    </div>
+						  </div>
+						</div>
 					</div>
 				</div>
 				<div class="support-div-2">
@@ -44,31 +103,31 @@
 					<div class="sp-content quit-links">
 						<div class="row">
 						  <div class="col-xs-6 col-sm-4 link-icon-wrap">
-						    <a class="link-icon-support" href="#" title="">
+						    <a class="link-icon-support" href="support-center-details.html" title="">
 						      <label><span class="sp-icon icon1"></span></label>
 						      <span class="text">Tốc độ giao hàng</span>
 						    </a>
 						  </div>
 						  <div class="col-xs-6 col-sm-4 link-icon-wrap">
-						    <a class="link-icon-support" href="#" title="">
+						    <a class="link-icon-support" href="support-center-details.html" title="">
 						      <label><span class="sp-icon icon2"></span></label>
 						      <span class="text">Hướng dẫn hủy đơn hàng</span>
 						    </a>
 						  </div>
 						  <div class="col-xs-6 col-sm-4 link-icon-wrap">
-						    <a class="link-icon-support" href="#" title="">
+						    <a class="link-icon-support" href="support-center-details.html" title="">
 						      <label><span class="sp-icon icon3"></span></label>
 						      <span class="text">Hướng dẫn đổi hàng và trả hàng hoàn tiền</span>
 						    </a>
 						  </div>
 						  <div class="col-xs-6 col-sm-4 link-icon-wrap">
-						    <a class="link-icon-support" href="#" title="">
+						    <a class="link-icon-support" href="support-center-details.html" title="">
 						      <label><span class="sp-icon icon4"></span></label>
 						      <span class="text">Hướng dẫn kiểm tra đơn hàng</span>
 						    </a>
 						  </div>
 						  <div class="col-xs-6 col-sm-4 link-icon-wrap">
-						    <a class="link-icon-support" href="#" title="">
+						    <a class="link-icon-support" href="support-center-details.html" title="">
 						      <label><span class="sp-icon icon5"></span></label>
 						      <span class="text">Hướng dẫn cách đặt hàng</span>
 						    </a>
