--- a/myface-onface-html/src/views/user-account-order-info.html
+++ b/myface-onface-html/src/views/user-account-order-info.html
@@ -45,7 +45,7 @@
 						<tbody>
 							{% for x in [1,2,3,4,5]%}
 							<tr>
-								<td><a href="#" class="">#12486578929</a></td>
+								<td><a href="user-account-order-details.html" class="">#12486578929</a></td>
 								<td><span>04/11/2015</span></td>
 								<td><span>Bộ 3 nồi thủy tinh Amberline Luminarc</span></td>
 								<td>
@@ -56,7 +56,7 @@
 								</td>
 							</tr>
 							<tr>
-								<td><a href="#" class="">#12486578929</a></td>
+								<td><a href="user-account-order-details.html" class="">#12486578929</a></td>
 								<td><span>07/05/2016</span></td>
 								<td><span>bộ bình ly Rotterdam Butterfly 5 món L4806 </span></td>
 								<td>
