--- a/myface-onface-html/src/views/user-account-order-details.html
+++ b/myface-onface-html/src/views/user-account-order-details.html
@@ -1,3 +1,4 @@
+{% set current_page = 'user-account-order-details' %}
 {% extends "layout/_layout-myface-shop.html" %}
 {% block page-container %}
 <!--main-content-->
@@ -10,7 +11,55 @@
 		{% include "block/_account-nav.html" %}
 		<!--./user-account-nav-->
 		<!--user-account-content-->
-		<div class="user-account-content general-content">
+		<div class="user-account-content order-content">
+			<div class="col-md-10 col-md-offset-1">
+				<div class="user-head">
+					<h2 class="user-title">Thông tin đơn hàng:#12486578929</h2>
+				</div>
+				<div class="order-table-wrap">
+					<table class="table table-striped table-bordered order-table">
+						<thead>
+							<tr>
+								<th class="">Sản phẩm mua</th>
+								<th class="">Mã sản phẩm</th>
+								<th class="">Giá tiền</th>
+								<th class="">Giảm giá</th>					
+								<th class="">Số lượng</th>
+								<th class="">Tổng cộng</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td><span>Laptop Asus G501JW-CN217 Đen</span></td>
+								<td><span>#134654543745</span></td>
+								<td><span>540.000đ</span></td>
+								<td><span>1.000.000đ</span</td>
+								<td><span>01</span></td>
+								<td><span>500.000đ</span></td>
+							</tr>
+						</tbody>
+						<tfoot>
+							<tr>
+								<td colspan="5">
+									<span>Tổng cộng</span><br>
+									<span>Tổng cộng</span><br>
+									<span>Tổng cộng</span><br>
+									<span>Tổng cộng</span>
+								</td>
+								<td>
+									<span>1.200.000đ</span><br>
+									<span>1.200.000đ</span><br>
+									<span>1.200.000đ</span><br>
+									<span>1.200.000đ</span>
+								</td>
+							</tr>
+						</tfoot>
+					</table>
+				</div>
+				<div class="full-width load-more">
+				  <button class="btn btn-loadmore">Xem đơn hàng tiếp theo</button>
+				</div>
+			</div>
 		</div><!--./user-account-content-->
 	</div>
 </main>
