--- a/myface-onface-html/src/views/user-account-order-details.html
+++ b/myface-onface-html/src/views/user-account-order-details.html
@@ -41,10 +41,12 @@
 						<tfoot>
 							<tr>
 								<td colspan="5">
-									<span>Tổng cộng</span><br>
-									<span>Tổng cộng</span><br>
-									<span>Tổng cộng</span><br>
-									<span>Tổng cộng</span>
+									<div class="col-md-2 pull-right">
+										<span>Tổng cộng</span><br>
+										<span>Tổng cộng</span><br>
+										<span>Tổng cộng</span><br>
+										<span>Tổng cộng</span>
+									</div>
 								</td>
 								<td>
 									<span>1.200.000đ</span><br>
