--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -3776,6 +3776,14 @@ h2.shop-name .shop-name-text {
 .order-table a:hover {
   text-decoration: underline;
 }
+.order-tb-lb {
+  float: right;
+  font-weight: 600;
+}
+.total-sum {
+  font-weight: 600;
+  color: #ff5722;
+}
 .payment-info {
   width: 100%;
   float: left;
