--- a/myface-onface-html/src/assets/less/style/page/account.less
+++ b/myface-onface-html/src/assets/less/style/page/account.less
@@ -171,6 +171,14 @@
 		}
 	}
 }
+.order-tb-lb {
+	float: right;
+	font-weight: 600;
+}
+.total-sum {
+	font-weight: 600;
+	color: #ff5722;
+}
 .payment-info {
 	width: 100%;
 	float: left;
