--- a/myface-onface-html/src/views/user-account-order-details.html
+++ b/myface-onface-html/src/views/user-account-order-details.html
@@ -37,22 +37,38 @@
 								<td><span>01</span></td>
 								<td><span>500.000đ</span></td>
 							</tr>
+							<tr>
+								<td><span>Laptop Asus G501JW-CN217 Đen</span></td>
+								<td><span>#134654543745</span></td>
+								<td><span>540.000đ</span></td>
+								<td><span>1.000.000đ</span</td>
+								<td><span>01</span></td>
+								<td><span>500.000đ</span></td>
+							</tr>
+							<tr>
+								<td><span>Laptop Asus G501JW-CN217 Đen</span></td>
+								<td><span>#134654543745</span></td>
+								<td><span>540.000đ</span></td>
+								<td><span>1.000.000đ</span</td>
+								<td><span>01</span></td>
+								<td><span>500.000đ</span></td>
+							</tr>
 						</tbody>
 						<tfoot>
 							<tr>
 								<td colspan="5">
-									<div class="col-md-2 pull-right">
-										<span>Tổng cộng</span><br>
-										<span>Tổng cộng</span><br>
-										<span>Tổng cộng</span><br>
-										<span>Tổng cộng</span>
+									<div class="col-md-3 order-tb-lb">
+										<p>Tổng cộng:</p>
+										<p>Giảm giá khuyến mãi:</p>
+										<p>Phí vận chuyển:</p>
+										<p class="total-sum">Thanh toán:</p>
 									</div>
 								</td>
-								<td>
-									<span>1.200.000đ</span><br>
-									<span>1.200.000đ</span><br>
-									<span>1.200.000đ</span><br>
-									<span>1.200.000đ</span>
+								<td class="order-tb-price">
+									<p>1.200.000đ</p>
+									<p>1.200.000đ</p>
+									<p>1.200.000đ</p>
+									<p class="total-sum">1.200.000đ</p>
 								</td>
 							</tr>
 						</tfoot>
