--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -3770,15 +3770,82 @@ h2.shop-name .shop-name-text {
   text-decoration: none;
   color: #ff5722;
 }
+.order-detail .user-title {
+  width: 100%;
+  margin-bottom: 20px;
+}
+.order-detail .order-row {
+  margin-bottom: 20px;
+}
+.order-detail .order-row label {
+  width: 180px;
+  margin-right: 15px;
+}
+.order-process {
+  width: 100%;
+  float: left;
+}
+.order-process .progressbar {
+  height: 75px;
+  margin: 0 0 30px;
+  position: relative;
+  padding: 0;
+}
+.order-process .progressbar:after {
+  content: '';
+  height: 1px;
+  background: #dfdfdf;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: auto;
+  bottom: 15px;
+}
+.order-process .progressbar li {
+  position: relative;
+  width: 25%;
+  color: #727272;
+}
+.order-process .progressbar li:before {
+  width: 18px;
+  background-color: #fff;
+  display: block;
+  background-image: none;
+  font: normal normal normal 14px/1 FontAwesome;
+  content: "\f058";
+  font-size: 18px;
+  top: auto;
+  bottom: -38px;
+  z-index: 9;
+}
+.order-process .progressbar li.active:before {
+  color: #ff5722;
+}
+.order-process .progressbar li:after {
+  display: none;
+}
+.order-process .progressbar li label {
+  width: 100%;
+}
 .order-table a {
   color: #212121;
 }
 .order-table a:hover {
   text-decoration: underline;
 }
-.order-tb-lb {
+.data-price,
+.data-discount,
+.data-quantity,
+.data-total {
+  text-align: right;
+}
+.order-tb-lb div {
   float: right;
+  padding-right: 15px;
   font-weight: 600;
+}
+.order-tb-price {
+  text-align: right;
 }
 .total-sum {
   font-weight: 600;
