--- a/myface-onface-html/src/assets/less/style/page/account.less
+++ b/myface-onface-html/src/assets/less/style/page/account.less
@@ -163,6 +163,67 @@
 		color: @primary-color;
 	}
 }
+.order-detail {
+	.user-title {
+		width: 100%;
+		margin-bottom: 20px;
+	}
+	.order-row {
+		margin-bottom: 20px;
+		label {
+			width: 180px;
+			margin-right: 15px;
+		}
+	}
+}
+.order-process {
+	width: 100%;
+	float: left;
+	.progressbar {
+		height: 75px;
+		margin: 0 0 30px;
+		position: relative;
+		padding: 0;
+		&:after {
+			content: '';
+	    height: 1px;
+	    background: @line-color-1;
+	    position: absolute;
+	    left: 0;
+	    right: 0;
+	    top: auto;
+	    bottom: 15px;
+		}
+		li {
+			position: relative;
+			width: 25%;
+			color: @text-color-2;
+			&:before {
+				width: 18px;
+				background-color: #fff;
+				display: block;
+				background-image: none;
+				font: normal normal normal 14px/1 FontAwesome;
+				content: "\f058";
+				font-size: 18px;
+				top: auto;
+				bottom: -38px;
+				z-index: 9;
+			}
+			&.active {
+				&:before {
+					color: #ff5722;
+				}
+			}
+			&:after {
+				display: none;
+			}
+			label {
+				width: 100%;
+			}
+		}
+	}
+}
 .order-table {
 	a {
 		color: @text-color-1;
@@ -171,9 +232,21 @@
 		}
 	}
 }
+.data-price,
+.data-discount,
+.data-quantity,
+.data-total {
+	text-align: right;
+}
 .order-tb-lb {
-	float: right;
-	font-weight: 600;
+	div {
+		float: right;
+		padding-right: 15px;
+		font-weight: 600;
+	}
+}
+.order-tb-price {
+	text-align: right;
 }
 .total-sum {
 	font-weight: 600;
