--- a/myface-onface-html/src/views/user-account-order-details.html
+++ b/myface-onface-html/src/views/user-account-order-details.html
@@ -11,53 +11,72 @@
 		{% include "block/_account-nav.html" %}
 		<!--./user-account-nav-->
 		<!--user-account-content-->
-		<div class="user-account-content order-content">
+		<div class="user-account-content order-detail">
 			<div class="col-md-10 col-md-offset-1">
 				<div class="user-head">
-					<h2 class="user-title">Thông tin đơn hàng:#12486578929</h2>
+					<h2 class="user-title">Chi tiết đơn hàng:#12486578929</h2>
+					<p class="order-row">
+						<label>Ngày đặt hàng:</label>07/05/2015 - 08:46
+					</p>
+					<p class="order-row">
+						<label>Thời gian giao hàng dự kiến:</label>09/05/2016
+					</p>
+					<p class="order-row">
+						<label>Địa chỉ nhận hàng:</label>180 Cao Lỗ, Phường 4, Quận 8, Hồ Chí Minh.
+					</p>
+					<p class="order-row">
+						<label>Thông tin thanh toán:</label>Thanh toán bằng tiền mặt khi nhận hàng (COD)
+					</p>
+				</div>
+				<div class="order-process">
+					<label class="order-row">Trạng thái đơn hàng:</label>
+					<ul class="progressbar">
+						<li class="active">
+							<label>Trạng thái đơn hàng</label>
+							07/05/2015 - 08:49
+						</li>
+						<li class="active">
+							<label>Trạng thái đơn hàng</label>
+							07/05/2015 - 08:49
+						</li>
+						<li class="active">
+							<label>Trạng thái đơn hàng</label>
+							07/05/2015 - 08:49
+						</li>
+						<li>
+							<label>Trạng thái đơn hàng</label>
+							07/05/2015 - 08:49
+						</li>
+					</ul>
 				</div>
 				<div class="order-table-wrap">
 					<table class="table table-striped table-bordered order-table">
 						<thead>
 							<tr>
-								<th class="">Sản phẩm mua</th>
-								<th class="">Mã sản phẩm</th>
-								<th class="">Giá tiền</th>
-								<th class="">Giảm giá</th>					
-								<th class="">Số lượng</th>
-								<th class="">Tổng cộng</th>
+								<th class="data-sp">Sản phẩm mua</th>
+								<th class="data-id-sp">Mã sản phẩm</th>
+								<th class="data-price">Giá tiền</th>
+								<th class="data-discount">Giảm giá</th>					
+								<th class="data-quantity">Số lượng</th>
+								<th class="data-total">Tổng cộng</th>
 							</tr>
 						</thead>
 						<tbody>
+							{% for x in [1,2,3] %}
 							<tr>
-								<td><span>Laptop Asus G501JW-CN217 Đen</span></td>
-								<td><span>#134654543745</span></td>
-								<td><span>540.000đ</span></td>
-								<td><span>1.000.000đ</span</td>
-								<td><span>01</span></td>
-								<td><span>500.000đ</span></td>
+								<td class="data-sp"><span>Laptop Asus G501JW-CN217 Đen</span></td>
+								<td class="data-id-sp"><span>#134654543745</span></td>
+								<td class="data-price"><span>540.000đ</span></td>
+								<td class="data-discount"><span>1.000.000đ</span</td>
+								<td class="data-quantity"><span>01</span></td>
+								<td class="data-total"><span>500.000đ</span></td>
 							</tr>
-							<tr>
-								<td><span>Laptop Asus G501JW-CN217 Đen</span></td>
-								<td><span>#134654543745</span></td>
-								<td><span>540.000đ</span></td>
-								<td><span>1.000.000đ</span</td>
-								<td><span>01</span></td>
-								<td><span>500.000đ</span></td>
-							</tr>
-							<tr>
-								<td><span>Laptop Asus G501JW-CN217 Đen</span></td>
-								<td><span>#134654543745</span></td>
-								<td><span>540.000đ</span></td>
-								<td><span>1.000.000đ</span</td>
-								<td><span>01</span></td>
-								<td><span>500.000đ</span></td>
-							</tr>
+							{%endfor%}
 						</tbody>
 						<tfoot>
 							<tr>
-								<td colspan="5">
-									<div class="col-md-3 order-tb-lb">
+								<td colspan="5" class="order-tb-lb">
+									<div>
 										<p>Tổng cộng:</p>
 										<p>Giảm giá khuyến mãi:</p>
 										<p>Phí vận chuyển:</p>
