--- a/myface-onface-html/src/assets/less/style/page/account.less
+++ b/myface-onface-html/src/assets/less/style/page/account.less
@@ -337,3 +337,80 @@
 .add-address-form {
 	display: none;
 }
+.gift-title {
+	font-weight: 700;
+}
+.giftcode-block {
+	width: 100%;
+	height: 100px;
+	padding: 15px;
+	margin-bottom: 20px;
+	border: @border;
+	border-radius: 3px;
+	> div {
+		padding-left: 0;
+		padding-right: 0;
+	}
+}
+.coin {
+	height: 45px;
+	font-size: 26px;
+	padding-left: 72px;
+	padding-top: 5px;
+	background: url('../images/icons/coins.png') no-repeat top left;
+	background-size: 65px 45px;
+}
+.giftcode-history {
+	margin-bottom: 20px;
+	a {
+		color: @text-color-1;
+		text-decoration: underline;
+	}
+}
+.giftcode-table-wrap {
+	table {
+		th {
+			background-color: #efefef;
+		}
+	}
+	.gift-des {
+		padding-right: 60px;
+		a {
+			color: @green;
+			text-decoration: underline;
+		}
+	}
+	.btn-tool {
+		width: 165px;
+		.btn-box-tool {
+			margin-left: 10px;
+		}
+	}
+	.gift-date {
+		width: 110px;
+		border: @border;
+		border-radius: 3px;
+		display: inline-block;
+		padding: 7px; 
+		text-align: center;
+		background-color: @bg-color-3;
+		color: @text-color-2;
+	}
+	.available {
+		.gift-date {
+			background-color: transparent;
+			color: @green;
+		}
+	}
+}
+.remove-radio {
+	.checkbox {
+		margin-top: 0;
+		margin-bottom: 0;
+		span {
+			&:before {
+				top: 2px;
+			}
+		}
+	}
+}
