--- a/myface-onface-html/src/assets/less/style/style.less
+++ b/myface-onface-html/src/assets/less/style/style.less
@@ -44,6 +44,9 @@
 @import "page/myface-checkout.less";
 @import "page/register.less";
 @import "page/support-center.less";
+//Resposive
+//--------
+@import "responsive.less";
 //Plugins
 //--------
 @import "plugin/bootstrap-select.less";
